--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .header {
-    min-height: 20vh;
     width: 100%;
     background-color: white;
     position: sticky;
@@ -74,30 +78,27 @@ nav img {
 }
 
 .heroSection {
-    width: 80%; margin-top: 20px;
-    margin: 330px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
     text-align: left;
     padding-top: 10px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
 }
 
 .text-box {
+    width: 80%;
     box-shadow: 5px 5px 1px rgba(0, 0, 0, 1);
     border: 3px solid black;
     border-radius: 10px;
     background-color: #002C4A;
     border-radius: 10px;
-    width: 80%;
     color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     padding: 24px;
-    margin-top: 24px;
+    margin-top: 36px;
+    
 }
 
 .text-box h1 {
@@ -143,11 +144,12 @@ nav img {
 
 nav .fa {
     display: none;
+
 }
 
 @media(max-width: 700px) {
     .text-box h1 {
-        font-size: 36px;
+        font-size: 42px;
     }
     .nav-links ul li {
         display: block;
@@ -183,7 +185,7 @@ nav .fa {
     width: 80%;
     margin: auto;
     text-align: left;
-    padding-top: 10px;   
+    padding-top: 75px;   
 }
 
 h2 {
@@ -259,9 +261,23 @@ p {
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
 }
 
-@media(max-width: 860px){
-    .row{
-        flex-direction: column;
+@media(max-width: 900px){
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+}
+
+@media(max-width: 700px){
+    .row {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    .liked-things-col img {
+        transform: scale(.7);
     }
 }
 
@@ -269,17 +285,24 @@ p {
 
 .skills {
     align-items: center;
-    width: 80%;
     margin: auto;
     text-align: left;
     padding: 24px;
     padding-bottom: 100px;
 }
 
+.skills img {
+    width: 100%;
+}
+
 .skills-row {
     background-color: #002C4A;
-    padding: 24px;
+    padding: 12px;
     border-radius: 10px;
+}
+
+.skills p {
+    padding-bottom: 24px;
 }
 
 /*------- contact -------*/
@@ -322,5 +345,4 @@ p {
     margin-bottom: 16px;
     text-align: left;
 }
-
 
